--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               </div>
               <h4 class="mt-4 mb-2" data-aos="fade-up" data-aos-delay="400">Puissance 4</h4>
               <p>Création d'un jeu puissance 4 en Javascript, HTML, CSS</p>
-              <a href="./puissance4" class="link-custom">Jouer /</a>
-              <a href="https://github.com/Bazou7/Puissance4" class="link-custom">Voir GitHub</a>
+              <a href="./puissance4" class="link-custom" target="_blank">Jouer /</a>
+              <a href="https://github.com/Bazou7/Puissance4" class="link-custom" target="_blank">Voir GitHub</a>
             </div>
           </div>
 
@@ -103,7 +103,7 @@
               <p>Gestion d'un cinéma, incluant la gestion des utilisateurs et des abonnements.</p>
               <!--<a href="./" class="link-custom">Aperçu /</a>-->
               <a href="#myCinema" class="link-custom">Apercu /</a>
-              <a href="https://github.com/Bazou7/MyCinema" class="link-custom">Voir GitHub </a>
+              <a href="https://github.com/Bazou7/MyCinema" class="link-custom" target="_blank">Voir GitHub </a>
             </div>
           </div>
 
@@ -114,8 +114,8 @@
               </div>
               <h4 class="mt-4 mb-2" data-aos="fade-up" data-aos-delay="500">Tic Tac Toe</h4>
               <p>Jeu du Tic Tac Toe en Javascript, HTML, CSS</p>
-              <a href="./TicTacToe" class="link-custom">Jouer /</a>
-              <a href="https://github.com/Bazou7/TicTacToe" class="link-custom">Voir GitHub </a>
+              <a href="./TicTacToe" class="link-custom" target="_blank">Jouer /</a>
+              <a href="https://github.com/Bazou7/TicTacToe" class="link-custom" target="_blank">Voir GitHub </a>
             </div>
           </div>
         </div>
@@ -126,10 +126,21 @@
               <div class="iconbox rounded-4">
                 <i class="las la-coins"></i>
               </div>
-              <h4 class="mt-4 mb-2" data-aos="fade-up" data-aos-delay="400">My Internet Relay Chat</h4>
+              <h4 class="mt-4 mb-2" data-aos="fade-up" data-aos-delay="300">My Internet Relay Chat</h4>
               <p>Chat instantanée réalisé avec Node.js, Express, Socket io et React.js</p>
               <a href="#irc" class="link-custom">Apercu /</a>
-              <a href="https://github.com/Bazou7/MyIRC" class="link-custom">Voir GitHub</a>
+              <a href="https://github.com/Bazou7/MyIRC" class="link-custom" target="_blank">Voir GitHub</a>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 mb-5">
+            <div class="projets p-4 bg-base rounded-4 shawdow-effect">
+              <div class="iconbox rounded-4">
+                <i class="las la-coins"></i>
+              </div>
+              <h4 class="mt-4 mb-2" data-aos="fade-up" data-aos-delay="300">Not So Spotify</h4>
+              <p>Plateforme permettant d'écouter de la musique grâce à une API fournie en React</p>
+              <a href="#spotify" class="link-custom">Apercu /</a>
+              <a href="https://github.com/oliviermenin/NotSoSpotify" class="link-custom" target="_blank">Voir GitHub</a>
             </div>
           </div>
         </div>
@@ -146,27 +157,38 @@
         <h1 class="mb-4">My Cinema</h1>
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="300">
-            <img id="myCinema" src="/assets/images/cinema.PNG" alt="">
+            <img id="myCinema" src="./assets/images/cinema.png" alt="">
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <img class="project-image" src="/assets/images/cinema2.PNG" alt="">
+            <img class="project-image" src="./assets/images/cinema2.PNG" alt="">
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 mt-5" data-aos="fade-up" data-aos-delay="300">
-            <img class="project-image" src="/assets/images/cinema3.png" alt="">
+            <img class="project-image" src="./assets/images/cinema3.png" alt="">
           </div>
           <div class="col-lg-6 my-5" data-aos="fade-up" data-aos-delay="300">
-            <img class="project-image" src="/assets/images/cinema4.png" alt="">
+            <img class="project-image" src="./assets/images/cinema4.png" alt="">
           </div>
         </div>
         <h1 class="mt- 5 mb-4">My IRC</h1>
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="300">
-            <img id="irc" src="/assets/images/irc.PNG" alt="">
+            <img id="irc" src="./assets/images/irc.PNG" alt="">
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <img class="project-image" src="/assets/images/irc1.PNG" alt="">
+            <img class="project-image" src="./assets/images/irc1.PNG" alt="">
+          </div>
+        </div>
+
+        <h1 class="mt- 5 mb-4">Not So Spotify</h1>
+        <div class="row">
+          <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="300">
+            <img id="spotify" src="./assets/images/spotify.PNG" alt="">
+            <img class="project-image mt-3" src="./assets/images/spotify2.PNG" alt="">
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+            <img class="project-image" src="./assets/images/spotify1.PNG" alt="">
           </div>
         </div>
       </div>
