portfolio update project

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
         </div>
 
-        <h1 class="mt- 5 mb-4">Not So Spotify</h1>
+        <h1 class="mt-5 mb-4">Not So Spotify</h1>
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="300">
             <img id="spotify" src="./assets/images/spotify.PNG" alt="">
